--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "axios": "^1.6.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.17"
   },
   "browserslist": {
     "production": [
