--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-command = "npm run build"
-publish = "out"
+  base = "frontend"  
+  command = "npm run build"
+  publish = "frontend/build"  
 
 [[redirects]]
-       from = "/*"
-       to = "/index.html"
-       status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
