--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend"  
   command = "npm run build"
-  publish = "frontend/frontend/build"  
+  publish = "/build"  
 
 [[redirects]]
   from = "/*"
